--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
 	<header>
 		<nav class="navbar">
 			<div class="container">
-				<div class="logo">logo</div>
-				<div class="links">link link link link link</div>
-				<div class="login">login</div>
+				<div class="logo"> <img src="img/logo.svg" alt=""></div>
+                <div class="link">
+                    <ul class="main-list">
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perchè Discrod</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+				<div class="login"> <button>Accedi</button></div>
 			</div>
 		</nav>
 
-		<div class="jumbo">
-			<div class="content">
-
-			</div>
+		<div class="jumbo"> 
+			<div class="content"></div>
 		</div>
 	</header>
 
