--- a/index.html
+++ b/index.html
@@ -14,27 +14,35 @@
 			<div class="container">
 				<div class="logo"> <img src="img/logo.svg" alt=""></div>
                 <div class="link">
-                    <ul class="main-list">
+                <ul class="main-list">
                         <li><a href="">Scarica</a></li>
                         <li><a href="">Perchè Discrod</a></li>
                         <li><a href="">Nitro</a></li>
                         <li><a href="">Sicurezza</a></li>
                         <li><a href="">Assistenza</a></li>
-                    </ul>
+                </ul>
                 </div>
 				<div class="login"> <button>Accedi</button></div>
 			</div>
 		</nav>
 
 		<div class="jumbo"> 
-			<div class="content"></div>
+			<div class="content">
+                <h1>Il tuo posto per parlare</h1>
+                <p>Che tu faccia parte di un club, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare del tempo assieme, Discord rende più facile chiccchierare ogni giorno e ritrovarsi più spesso.</p>
+                <div class="tasti">
+                    <div class="download">&#8595;	Scarica per mac</div>
+                    <div class="open">Apri Discord nel tuo browser</div>
+                </div>
+                
+            </div>
 		</div>
 	</header>
 
 	<main>
 		<section class="section-feature">
 			<div class="container">
-				<div class="image"></div>
+				<div class="image"> </div>
 				<div class="text"></div>
 			</div>
 		</section>
