add part of main

--- a/index.html
+++ b/index.html
@@ -42,27 +42,38 @@
 	<main>
 		<section class="section-feature">
 			<div class="container">
-				<div class="image"> </div>
-				<div class="text"></div>
+				<div class="image-rana"> </div>
+				<div class="text">
+                    <h1> Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza usare una chat di gruppo. </p>
+                </div>
 			</div>
 		</section>
 
 		<section class="section-feature reverse bkg-gray">
 			<div class="container">
-				<div class="image"></div>
-				<div class="text"></div>
+				<div class="image-mago"></div>
+				<div class="text">
+                    <h1>Dove trovarsi è facile</h1>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare. </p>
+                </div>
 			</div>
 		</section>
 
 		<section class="section-feature">
 			<div class="container">
-				<div class="image"></div>
-				<div class="text"></div>
+				<div class="image-poli"></div>
+				<div class="text">
+                    <h1>Da pochi a Fandom</h1>
+                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
+                </div>
 			</div>
 		</section>
 
 		<section class="section-full bkg-gray">
-			<div class="container"></div>
+			<div class="container">
+                
+            </div>
 		</section>
 	</main>
 
