--- a/index.html
+++ b/index.html
@@ -72,10 +72,23 @@
 
 		<section class="section-full bkg-gray">
 			<div class="container">
-                
+                <div class="text">
+                    <h1>Tecnologia affidabile per tenersi in contatto</h1>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                </div>
+                <div class="image-last"></div>
+                <section>
+                        <div class="push">
+                            <h2>Pronto a iniziare la tua avventura? </h2>
+                            <div class="download-2">&#8595;	Scarica per mac</div>
+                        </div>   
+                    </div>
+                </section>
             </div>
-		</section>
-	</main>
+            
+        </section>
+	
+    </main>
 
 	<footer>
 		<nav class="nav-footer">
