--- a/index.html
+++ b/index.html
@@ -93,16 +93,64 @@
 	<footer>
 		<nav class="nav-footer">
 			<div class="footer-top container">
-				<div class="footer-column column-socials"></div>
-				<div class="footer-column column-links"></div>
-				<div class="footer-column column-links"></div>
-				<div class="footer-column column-links"></div>
-				<div class="footer-column column-links"></div>
+				<div class="footer-column column-socials">
+                    <h2 class="blue"> Il tuo posto per parlare </h2> <br>
+                    <div class="pino">
+                        <div class="italiano"> <img class="flag" src="img/ita.png" alt=""> Italiano &#8744;</div>
+                    </div>
+                </div>
+				<div class="footer-column column-links">
+                    <ul class="footer-list">
+                        <li class="paragraph"> <a href="http://"></a>Prodotto </li>
+                        <li class="link-white"> <a href="http://"></a> Scarica</li>
+                        <li class="link-white"> <a href="http://"></a> Perchè Discord</li>
+                        <li class="link-white"> <a href="http://"></a> Nitro</li>
+                        <li class="link-white"> <a href="http://"></a> Sicurezza</li>
+                        <li class="link-white"> <a href="http://"></a> Assistenza</li>
+                    </ul>
+                </div>
+				<div class="footer-column column-links">
+                    <ul class="footer-list">
+                        <li class="paragraph"> <a href="http://"></a> Compagnia</li>
+                        <li class="link-white"> <a href="http://"></a> Chi iamo</li>
+                        <li class="link-white"> <a href="http://"></a> Lavorna con noi</li>
+                        <li class="link-white"> <a href="http://"></a> Marchio</li>
+                        <li class="link-white"> <a href="http://"></a> Redazione</li>
+                        <li class="link-white"> <a href="http://"></a> Negozio</li>
+                    </ul class="footer-list">
+                </div>
+				<div class="footer-column column-links">
+                    <ul class="footer-list">
+                        <li class="paragraph"> <a href="http://"></a> Risorse</li>
+                        <li class="link-white"> <a href="http://"></a> Scarica</li>
+                        <li class="link-white"> <a href="http://"></a> Perchè Discord</li>
+                        <li class="link-white"> <a href="http://"></a> Nitro</li>
+                        <li class="link-white"> <a href="http://"></a> Assistenza</li>
+                        <li class="link-white"> <a href="http://"></a> Sicurezza</li>
+                        <li class="link-white"> <a href="http://"></a> Scarica</li>
+                        <li class="link-white"> <a href="http://"></a> Perchè Discord</li>
+                        <li class="link-white"> <a href="http://"></a> Nitro</li>
+                        <li class="link-white"> <a href="http://"></a> Sicurezza</li>
+                        <li class="link-white"> <a href="http://"></a> Assistenza</li>
+                    </ul>
+                </div>
+				<div class="footer-column column-links">
+                    <ul class="footer-list">
+                        <li class="paragraph"> <a href="http://"></a> Norme</li>
+                        <li class="link-white"> <a href="http://"></a> Perchè Discord</li>
+                        <li class="link-white"> <a href="http://"></a> Nitro</li>
+                        <li class="link-white"> <a href="http://"></a> Scarica</li>
+                        <li class="link-white"> <a href="http://"></a> Sicurezza</li>
+                        <li class="link-white"> <a href="http://"></a> Assistenza</li>
+                    </ul>
+                </div>
 			</div>
 
 			<div class="footer-bottom container">
-				<div class="logo">Logo</div>
-				<div class="button">Bottone</div>
+				<div class="logo">
+                    <img src="img/logo.svg" alt="">    
+                </div>
+				<div class="login-2">registrati</div>
 			</div>
 		</nav>
 	</footer>
