change color to nav bar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h1>Il tuo posto per parlare</h1>
                 <p>Che tu faccia parte di un club, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare del tempo assieme, Discord rende più facile chiccchierare ogni giorno e ritrovarsi più spesso.</p>
                 <div class="tasti">
-                    <div class="download">&#8595;	Scarica per mac</div>
+                    <div class="download"> <span>&#8595;</span>	Scarica per mac</div>
                     <div class="open">Apri Discord nel tuo browser</div>
                 </div>
                 
@@ -80,7 +80,7 @@
                 <section>
                         <div class="push">
                             <h2>Pronto a iniziare la tua avventura? </h2>
-                            <div class="download-2">&#8595;	Scarica per mac</div>
+                            <div class="download-2"> <span>&#8595;</span>	Scarica per mac</div>
                         </div>   
                     </div>
                 </section>
